Todo:
- Limit undo somehow. (Currently it stores all operations while you have free memory...)
- Create workarea system.
- Create menu like in the original. (Not the same items.)
- Autosave in every 1 min.
- Configurable autosave interval.
- Fix: TBDPalette.CopyColorFrom ignores start and count.


2023.02.21
- Added Undo/Redo code to Circle.
- Added Undo/Redo code to Draw.
- BugFix: Controls now captures OnMouseDown if none of its child does it.
  This prevents Draw to start drawing without pressing LMB over the draw area.
- Added Undo/Redo code to Fill.
- Added Undo/Redo code to FillTo.
- Added Undo/Redo code to Line.
- Added Undo/Redo code to Sep.
- Added Undo/Redo code to PutCEL.

2023.02.21
- Added Undo/Redo mechanism. (Not tested yet...)
- Added Undo/Redo buttons. (Not working yet...)
- Added Undo/Redo code to Box. You can now undo and redo Box drawing.

2023.02.19
- PutCEL now works as intended.
- PutCEL respects the state of (K) button.
- Vibrocolors is now a class and changes colors based on ticks instead of program loops.

2023.02.17
- Created a logo font, it is used in the splash screen.
- Added icon.
- GetCEL now stores position too.
- Pressing ESC or ` when in GetCEL or PutCEL cancels curent operation.
- Image position saved into BDP file. (Needed in CEL)
- PutCEL almost works as expected. Only thing is missing putting the CEL onto the image.

2023.02.16
- Pressing ` (the key below ESC) invokes PUTCel. It doesn't work fully, you can
  just move the picked CEL image around with the mouse, until you quit.
  Cannot continue now, I drank a beer and cannot concentrate anymore. :)

2023.02.15
- Added color selector to controls.
- Added selected colors to Settings, so they are saved on exit and loaded on startup.
- Clicking on color selector selects the clicked color.
- The selected color is used when Opaque ink is selected.
- The selected color is saved into Settings.
- On startup the color selector selects the box that contains the color saved in Settings.
