@@ -30,7 +30,7 @@ Tool2=LINE
 Tool3=CIRCLE
 Tool4=SEP.
 Tool5=FILLTO
-ActiveTool=0
+ActiveTool=2
 Ink0=OPAQUE
 Ink1=OPAQUE
 Ink2=L GRAD
@@ -44,6 +44,7 @@ UseAlpha=No
 
 [Settings]
 ShowSplash=No
+UndoLimit=3
 
 [Colors]
 Selected0=0
